Fix navigation overlapping with breadcrumbs

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 #page-content {
-    margin-top: 70px !important;
+    margin-top: 82px; !important;
 }
 
 .navigation {
